<resources>
    <string name="app_name">Piano Tiles</string>

    <string name="title_activity_game">GameActivity</string>
    <string name="input">Game Speed:</string>
    <string name="start">START</string>
    <string name="speed_advice">Easy: 20 Normal: 30 Hard: 40</string>
    <string name="game_speed">30</string>
    <string name="music">Music</string>
    <string name="vibration">Vibration</string>
</resources>
